[package]
name = "derive_builder"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
proc-macro = true

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }

[dependencies]
syn = { version = "1.0.85", features = ["full", "extra-traits"] }
quote = "1.0.14"
proc-macro2 = "1.0.36"
